@@ -4181,6 +4181,7 @@ if ( !class_exists( 'CoursePress' ) ) {
 				'minimum_password_lenght'			 => apply_filters( 'coursepress_min_password_length', 6 ),
 				'message_login_error'				 => __( 'Username and/or password is not valid.', 'cp' ),
 				'message_passcode_invalid'			 => __( 'Passcode is not valid.', 'cp' ),
+				'message_tos_invalid'			 => __( 'You must agree to the Terms of Service in order to signup.', 'cp' ),
 			) );
 			//admin_url( 'admin-ajax.php' )
 
