@@ -1198,7 +1198,6 @@ if ( !class_exists( 'CoursePress_Shortcodes' ) ) {
 						$button_url = get_permalink( $course_id );
 						$button .= '<button data-link="' . esc_url( $button_url ) . '" class="apply-button-enrolled ' . $class . '">' . $details_text . '</button>';
 					}
-					
 				}
 
 				// User is logged in, if its a student, lets see if they can access their course.
@@ -2238,7 +2237,7 @@ if ( !class_exists( 'CoursePress_Shortcodes' ) ) {
 					foreach ( $instructors as $instructor ) {
 
 						$profile_href = trailingslashit( site_url() ) . trailingslashit( $instructor_profile_slug );
-						$profile_href .= get_option( 'show_instructor_username', 1 ) == 1 ? trailingslashit( $instructor->user_login ) : md5(trailingslashit( $instructor->user_login ));
+						$profile_href .= get_option( 'show_instructor_username', 1 ) == 1 ? trailingslashit( $instructor->user_login ) : md5( trailingslashit( $instructor->user_login ) );
 
 						switch ( $style ) {
 
@@ -2360,10 +2359,10 @@ if ( !class_exists( 'CoursePress_Shortcodes' ) ) {
 			$instructor = get_userdata( $instructor_id );
 
 			if ( $instructor_id ) {
-				if(( get_option( 'show_instructor_username', 1 ) == 1 )){
+				if ( ( get_option( 'show_instructor_username', 1 ) == 1 ) ) {
 					$username = trailingslashit( $instructor->user_login );
-				}else{
-					$username = trailingslashit(md5($instructor->user_login));
+				} else {
+					$username = trailingslashit( md5( $instructor->user_login ) );
 				}
 				return trailingslashit( site_url() ) . trailingslashit( $instructor_profile_slug ) . $username;
 			}
@@ -2855,7 +2854,6 @@ if ( !class_exists( 'CoursePress_Shortcodes' ) ) {
 			if ( !current_user_can( 'manage_options' ) ) {//If current user is not admin, check if he can access to the units
 				if ( $course->details->post_author != get_current_user_id() ) {//check if user is an author of a course ( probably instructor )
 					if ( !current_user_can( 'coursepress_view_all_units_cap' ) ) {//check if the instructor, even if it's not the author of the course, maybe has a capability given by the admin
-
 						//if it's not an instructor who made the course, check if he is enrolled to course
 						// Added 3rd parameter to deal with legacy meta data
 						if ( !$student->user_enrolled_in_course( $course_id, $user_id, 'update_meta' ) ) {
@@ -3456,7 +3454,7 @@ if ( !class_exists( 'CoursePress_Shortcodes' ) ) {
 				$unit_id = 0;
 			}
 
-			$comments_args = array(
+			$comments_args	 = array(
 // change the title of send button
 				'label_submit'			 => 'Send',
 				// change the title of the reply secpertion
@@ -3468,7 +3466,7 @@ if ( !class_exists( 'CoursePress_Shortcodes' ) ) {
 			);
 			ob_start();
 			comment_form( $comments_args, $unit_id );
-			$content = ob_get_clean();
+			$content		 = ob_get_clean();
 			return $content;
 		}
 
@@ -3521,15 +3519,15 @@ if ( !class_exists( 'CoursePress_Shortcodes' ) ) {
 				case 'student_login':
 					require( $plugin_dir . 'includes/templates/student-login.php');
 					break;
-				
+
 				case 'student_signup':
 					require( $plugin_dir . 'includes/templates/student-signup.php');
 					break;
-				
+
 				case 'student_dashboard':
 					require( $plugin_dir . 'includes/templates/student-dashboard.php');
 					break;
-				
+
 				default:
 					_e( 'Page cannot be found', 'cp' );
 			}
@@ -3682,6 +3680,14 @@ if ( !class_exists( 'CoursePress_Shortcodes' ) ) {
 												$form_errors++;
 											}
 
+											if ( isset( $_POST[ 'tos_agree' ] ) ) {
+												if ( $_POST[ 'tos_agree' ] == '0' ) {
+													$form_message		 = __( 'You must agree to the Terms of Service in order to signup.', 'cp' );
+													$form_message_class	 = 'red';
+													$form_errors++;
+												}
+											}
+
 											if ( $form_errors == 0 ) {
 												if ( $student_id = $student->add_student( $student_data ) !== 0 ) {
 //$form_message = __( 'Account created successfully! You may now <a href="' . ( get_option( 'use_custom_login_form', 1 ) ? trailingslashit( site_url() . '/' . $this->get_login_slug() ) : wp_login_url() ) . '">log into your account</a>.', 'cp' );
@@ -3794,6 +3800,16 @@ if ( !class_exists( 'CoursePress_Shortcodes' ) ) {
 									<?php _e( 'Confirm Password', 'cp' ); ?>:
 									<input type="password" name="password_confirmation" value="" />
 								</label>
+								<br clear="both" /><br />
+								
+								<?php if ( shortcode_exists( 'signup-tos' ) ) { 
+									if ( get_option( 'show_tos', 0 ) == '1' ) {
+									?>
+									<label class="full"><?php echo do_shortcode( '[signup-tos]' ); ?></label>
+									<?php
+									}
+								}
+								?>
 
 								<?php do_action( 'coursepress_after_all_signup_fields' ); ?>
 
@@ -4184,7 +4200,7 @@ if ( !class_exists( 'CoursePress_Shortcodes' ) ) {
 											}
 											?>
 									</td>
-								<?php }//general col visibility                   ?>
+								<?php }//general col visibility                    ?>
 							</tr>
 							<?php
 							$current_row++;
