@@ -7,6 +7,7 @@ CHANGE LOG
 == Changelog ==
 
 = 1.2.2.4 =
+* Added integration with "Terms of Service" plugin http://premium.wpmudev.org/project/terms-of-service/
 * Improved CoursePress for multi-site.
 * Improved CoursePress security for multi-site.
 * Improved UX for MarketPress in the admin (MarketPress activation and installation menu, links and messages shown to users who don't have required permissions)
